<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="128dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/local_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/welcome_to_equity_bank"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/nationalId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.594"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/selectServiceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/select_the_service"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="MissingConstraints" />



        <TextView
            android:id="@+id/fullName"
            android:layout_width="121dp"
            android:layout_height="35dp"
            android:layout_marginTop="92dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/full_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/email"
            android:layout_width="128dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <TextView
            android:id="@+id/nationalId"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="92dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/national_id"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toEndOf="@+id/fullName"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="174dp"
            android:layout_height="46dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/nationalId" />


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="408dp"
            android:layout_height="491dp"
            android:columnCount="2"
            android:padding="16dp"
            android:rowCount="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectServiceText">



            <!-- Button 3 -->
            <Button
                android:id="@+id/btnCashW"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="Cash Withdrawal"
                android:drawableTop="@drawable/deposit"
                android:textColor="#FFFFFF"
                android:background="#A60A0A"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btnCashDep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="Cash Deposit"
                android:drawableTop="@drawable/cheque"
                android:textColor="#FFFFFF"
                android:background="#A60A0A"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/swift"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:drawableTop="@drawable/swift"
                android:text="Swift"
                android:textColor="#FFFFFF"
                android:background="#A60A0A"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/RTGS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:drawableTop="@drawable/rtgs"
                android:text="RTGS"
                android:textColor="#FFFFFF"
                android:background="#A60A0A"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/bankers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="Bankers Cheque"
                android:drawableTop="@drawable/cheque"
                android:textColor="#FFFFFF"
                android:background="#A60A0A"
                android:layout_margin="10dp"/>

            <!-- Button 6 -->
            <Button
                android:id="@+id/internal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="Internal Transfer"
                android:drawableTop="@drawable/withdrawal"
                android:textColor="#FFFFFF"
                android:background="#A60A0A"
                android:layout_margin="10dp"/>



<!--            <Button-->
<!--                android:id="@+id/button10"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_columnWeight="1"-->
<!--                android:text="Moneygram"-->
<!--                android:drawableTop="@drawable/moneygram"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:background="#A60A0A"-->
<!--                android:layout_margin="10dp"/>-->

<!--            &lt;!&ndash; Button 8 &ndash;&gt;-->
<!--            <Button-->
<!--                android:id="@+id/button8"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_columnWeight="1"-->
<!--                android:text="RTGS"-->
<!--                android:drawableTop="@drawable/rtgs"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:background="#A60A0A"-->
<!--                android:layout_margin="10dp"/>-->

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>