<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Swiftpg2Fragment"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription,MissingConstraints" />
        <TextView
            android:id="@+id/Beneficiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:textColor="@color/equity"
            android:text="@string/beneficiary"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtBenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:textColor="@color/equity"
            android:text="@string/benName"/>

        <EditText
            android:id="@+id/benName"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter name"/>



        <TextView
            android:id="@+id/txtbenAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:textStyle="bold"
            android:textColor="@color/equity"
            android:text ="Beneficiary Account" />


        <EditText
            android:id="@+id/benAccount"
            android:inputType="number"
            android:digits="0123456789"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter account"/>


        <TextView
            android:id="@+id/txtRefNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/equity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"

            android:text="Reference Number"/>

        <EditText
            android:id="@+id/refNo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter reference number"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:padding="10dp"
            />




    </LinearLayout>
