<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Swiftpg2Fragment"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription,MissingConstraints" />
        <TextView
            android:id="@+id/Beneficiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:textColor="@color/equity"
            android:text="@string/beneficiary"/>

        <TextView
            android:id="@+id/txtBenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:textColor="@color/equity"
            android:text="@string/benName"/>

        <EditText
            android:id="@+id/benName"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter name"/>



        <TextView
            android:id="@+id/txtbenAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:textStyle="bold"
            android:textColor="@color/equity"
            android:text ="Beneficiary Account" />


        <EditText
            android:id="@+id/benAccount"
            android:inputType="number"
            android:digits="0123456789"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter account"/>


        <TextView
            android:id="@+id/txtSwiftCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/equity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"

            android:text="Swift Code"/>

        <EditText
            android:id="@+id/swiftCode"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter swift code"/>

        <TextView
            android:id="@+id/txtBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/equity"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:text="Bank Name"/>
        <EditText
            android:id="@+id/bank"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter bank name"/>

        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/equity"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:text="Country"/>

        <EditText
            android:id="@+id/country"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:hint="Enter country"/>


        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:textColor="@color/equity"
            android:textStyle="bold"
            android:text="Physical Address"/>

        <EditText
            android:id="@+id/address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter address"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:textColor="@color/equity"
            android:textStyle="bold"
            android:text="Phone Number"/>


        <EditText
            android:id="@+id/phone"
            android:inputType="number"
            android:digits="0123456789"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="Enter phone number"/>
        <TextView
            android:id="@+id/txtPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/equity"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Purpose of Remittance"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            />

        <TextView
            android:id="@+id/purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Enter purpose"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />



        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:padding="10dp"
            />




    </LinearLayout>
</ScrollView>